add restore routs
